made error response changes
